Change Ruanda into Rwanda in polish translations

--- a/lib/countries/data/translations/countries-pl.yaml
+++ b/lib/countries/data/translations/countries-pl.yaml
@@ -194,7 +194,7 @@ RE: Reunion
 RO: Rumunia
 RS: Serbia
 RU: Federacja Rosyjska
-RW: Ruanda
+RW: Rwanda
 SA: Arabia Saudyjska
 SB: Wyspy Salomona
 SC: Seszele
